--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
